tests/fail/no_parameters_documented.rs
use doxidize::*;

#[doxidize]
/// no function parameters documented
/// and some more
pub fn add(first: i32, second: i32) -> i32 {
    first + second
}

pub fn main() {}
