tests/fail/no_parameters_documented.stderr
error: Function has no documented parameters or generics.
       Document at least one function parameter or generic.
 --> tests/fail/no_parameters_documented.rs:6:8
  |
6 | pub fn add(first: i32, second: i32) -> i32 {
  |        ^^^
